# yar

./: .gitignore  Dockerfile  build.sh  client.py  docker-compose.yml  pyproject.toml  yar.py
yar/: __init__.py  client.py  models.py  server.py  tui.py  yar.py
yar/test/: __init__.py  test_cli.py  test_sanity.py  test_socket_cleanup.py
